excited to finish my first ever website

--- a/index.html
+++ b/index.html
@@ -11,16 +11,49 @@
 
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1>My <span class="name-highlight">Personal</span> Website</h1>
             <h3>Junior developer</h3>
             <p>My name is Anish Kumar Biswas. I am a junior developer currently creating my own portfolio and it is my first project.So I want a create a professional website which will look nice and  currently I am just typing at random.</p>
+            <a class="link-button" target="_blank" href="https://github.com/anish2122">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/port1.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/port2.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become a great developer</h3>
+            <p>My dream is to become like Elon Musk.I want to be a great engineer like him.Also I want to contribute to my family,society and nation in every way possible</p>
+            <a class="link-button" target="_blank" href="https://github.com/anish2122">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
+    <section class="experience-area">
+        <h2>EXPERIENCES</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="name-highlight">2021 - Present | Pro Level Developer</h3>
+            <p>I am a pro level web developer. I know everything related to java,html,css and javascript.I also know programming languages.My favourite programing language is Python.I also know many other languages like Java,C,C++ and Python</p>
+
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Junior Developer</h2>
+            <h3 class="name-highlight">2020 - 2021 | Baby Level Web Developer</h3>
+            <p>I am a pro level web developer. I know everything related to java,html,css and javascript.I also know programming languages.My favourite programing language is Python.I also know many other languages like Java,C,C++ and Python</p>
+
+        </div>
+
+    </section>
+    <footer><p>
+        Copyright © 2020 Anish Biswas
+    </p></footer>
 </body>
 </html>
